--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -262,7 +262,7 @@ Whitman \and Elizabeth Perl \and Matheus de Barros \and Juliette
 Champagnat \and Abby Schamp \and Samantha Schiano \and Fabio Prior
 Caltabellotta \and Vladlena Gertseva \and Ian Taylor \and Kiva
 Oken \and Aaron Berger}
-\date{2025-05-30}
+\date{2025-06-03}
 
 \begin{document}
   \begin{titlepage}
@@ -528,13 +528,13 @@ structure.
 \addcontentsline{toc}{subsection}{Catches}
 
 Catches for Yelloweye Rockfish have averaged over \(20 mt\) in recent
-years (Figure~\ref{fig-es-landings}, Table~\ref{tbl-es-catches}).
-Yelloweye Rockfish was declared overfished in \(2002\) and remains under
-a rebuilding plan that substantially limits catch. However, as other
-rockfish stocks have rebuilt and Yelloweye Rockfish has progressed under
-its rebuilding plan, catches have slowly increased in recent years,
-primarily in the Oregon-Washington non-trawl fleet and the recreational
-fleets.
+years (Figure~\ref{fig-es-landings}, Table~\ref{tbl-es-catches}). The
+Yelloweye Rockfish stock was declared overfished in \(2002\) and remains
+under a rebuilding plan that substantially limits catch. However, as
+other rockfish stocks have rebuilt and Yelloweye Rockfish has progressed
+under its rebuilding plan, catches have slowly increased in recent
+years, primarily in the Oregon-Washington non-trawl fleet and the
+recreational fleets.
 
 \begin{figure}
 
@@ -576,7 +576,7 @@ Year & CA.TWL & CA.NONTWL & CA.REC & ORWA.TWL & ORWA.NONTWL & OR.REC & WA.REC & 
 2021 & 0.12 & 2.43 & 3.96 & 0.39 & 7.97 & 3.34 & 2.52 & 20.73 \\ 
 2022 & 0.10 & 5.60 & 3.80 & 0.76 & 15.55 & 5.20 & 2.62 & 33.64 \\ 
 2023 & 0.09 & 1.83 & 9.59 & 0.40 & 20.64 & 3.84 & 2.85 & 39.23 \\ 
-2024 & 0.19 & 0.00 & 4.65 & 0.44 & 3.09 & 3.66 & 2.91 & 14.94 \\ 
+2024 & 0.19 & 3.27 & 4.65 & 0.44 & 13.51 & 3.66 & 3.13 & 28.91 \\ 
 \bottomrule
 
 \end{longtable}
@@ -603,30 +603,34 @@ recreational fishery indices in Oregon, the \gls{indexwc}, and the
 aging error were corrected in the compositional data. No new data
 streams were considered in this update assessment.
 
-\subsection*{Stock biomass and
-dynamics}\label{stock-biomass-and-dynamics}
-\addcontentsline{toc}{subsection}{Stock biomass and dynamics}
+\subsection*{Stock Spawning Output and
+Dynamics}\label{stock-spawning-output-and-dynamics}
+\addcontentsline{toc}{subsection}{Stock Spawning Output and Dynamics}
 
 The Yelloweye Rockfish assessment uses estimates of fecundity
 (eggs-at-length) from the Dick et al. (2017) method, and spawning output
 is reported in millions of eggs. The unexploited level of spawning stock
 output is estimated to be 1190 million eggs (95\% confidence interval:
-1,048.1-1,331.9 million eggs) (Figure~\ref{fig-es-so}). At the beginning
-of 2025, the spawning stock output is estimated to be 477.63 million
-eggs (95\% confidence interval: 384--571 million eggs), which represents
-40.1\% of the unfished spawning output level.
+1,048.1 - 1,331.9 million eggs) (Figure~\ref{fig-es-so}). At the
+beginning of 2025, the spawning stock output is estimated to be 477.63
+million eggs (95\% confidence interval: 384 -- 571 million eggs), which
+represents 40.1\% of the unfished spawning output level.
 
 Estimated relative spawning output was below the minimum stock size
 threshold in the late 1990s and was lowest in the early 2000s before
-increasing over the last 20 years. The 2024 estimated relative spawning
+increasing over the last 20 years. The 2025 estimated relative spawning
 output follows an increasing trajectory and is slightly above the
 management target threshold (Figure~\ref{fig-es-so},
 Figure~\ref{fig-es-sb}). Though Yelloweye Rockfish are considered a
 single stock due to their population's even genetic and spatial
 structure throughout their range, this assessment is modeled with two
 areas (California and Oregon-Washington). Current population status
-differs by area wich may be valuable information for making management
+differs by area which may be valuable information for making management
 and allocation decisions (Figure~\ref{fig-status-area-es}).
+
+\clearpage
+
+\pagebreak
 
 \begingroup
 \fontsize{9.0pt}{10.8pt}\selectfont
@@ -794,7 +798,12 @@ Table~\ref{tbl-es-spr}).
 }
 
 \caption{\label{fig-es-kobe}Phase plot of fishing intensity versus
-fraction unfished.}
+fraction unfished. Each point represents the biomass ratio at the start
+of the year and the relative fishing intensity in that same year. Lines
+through the final point show 95\% intervals based on the asymptotic
+uncertainty for each dimension. The shaded ellipse is a 95\% region
+which accounts for the estimated correlation between the two
+quantities.}
 
 \end{figure}%
 
@@ -847,13 +856,12 @@ reference points based on 1) a target unfished spawning output of 40\%,
 maximum sustainable yield, are all listed in
 Table~\ref{tbl-ref-points-es-1}. Unfished spawning stock output for
 Yelloweye Rockfish was estimated to be 1190 million eggs (95\%
-confidence interval: 1,048.1-1,331.9 million eggs). The management
+confidence interval: 1,048.1 - 1,331.9 million eggs). The management
 target for Yelloweye Rockfish is defined as 40\% of the unfished
 spawning output (SO40\%), which is estimated by the model to be 476
-million eggs (95\% confidence interval: 419-533), which corresponds to
+million eggs (95\% confidence interval: 419 - 533), which corresponds to
 an exploitation rate of 0.026. This harvest rate provides an equilibrium
-yield of 122 mt at SO40\% (95\% confidence interval: 108-137 mt). The
-equilibrium yield curve is shown in Figure~\ref{fig-eq-yield-es}.
+yield of 122 mt at SO40\% (95\% confidence interval: 108 - 137 mt).
 
 \clearpage
 
@@ -898,34 +906,18 @@ MSY (mt) & 128 & 113 & 143 \\
 
 \endgroup
 
-\begin{figure}
-
-\centering{
-
-\pandocbounded{\includegraphics[keepaspectratio]{figures/r4ss_plots/plots/yield1_yield_curve.png}}
-
-}
-
-\caption{\label{fig-eq-yield-es}Equilibrium yield curve (derived from
-reference point values) for the base model. Values are based on 2024
-fishery selectivity and distribution with steepness fixed at 0.718. The
-relative spawning output is relative to unfished spawning output.}
-
-\end{figure}%
-
 \clearpage
 
 \subsection*{Management performance}\label{management-performance}
 \addcontentsline{toc}{subsection}{Management performance}
 
-Recent trends in total catch relative to managment guidelines is
-available in Table~\ref{tbl-yelloweye_management} and shows that total
-catch of Yelloweye Rockfish has remained below both the \gls{ofl} and
-\gls{acl} in each year since the previous assessment. Catch in
-Table~\ref{tbl-yelloweye_management} combines the two areas in this
-model as catch limits for Yelloweye Rockfish are managed as a single
-coastwide unit and includes both landings and estimated discard
-mortality.
+Recent trends in total catch relative to management guidelines is
+available in Table~\ref{tbl-es-management} and shows that total catch of
+Yelloweye Rockfish has remained below both the \gls{ofl} and \gls{acl}
+in each year since the previous assessment. Catch in
+Table~\ref{tbl-es-management} combines the two areas in this model as
+catch limits for Yelloweye Rockfish are managed as a single coast wide
+unit and includes both landings and estimated discard mortality.
 
 \begingroup
 \fontsize{9.0pt}{10.8pt}\selectfont
@@ -951,7 +943,7 @@ Year & OFL (mt) & ABC (mt) & ACL (mt) & Catch (mt) \\
 2021 & 97.5 & 83.5 & 50.0 & 20.73 \\ 
 2022 & 98.1 & 83.2 & 51.0 & 33.64 \\ 
 2023 & 89.6 & 75.3 & 52.0 & 39.23 \\ 
-2024 & 91.2 & 75.9 & 53.3 & 14.94 \\ 
+2024 & 91.2 & 75.9 & 53.3 & 28.91 \\ 
 \bottomrule
 
 \end{longtable}
@@ -1011,8 +1003,8 @@ This section will be updated after SSC GFSC review.
 
 \begin{table}[H]
 
-\caption{\label{tbl-es-decision-1}Decision table with 10-year
-projections. `Mgmt' refers to the three management scenarios (A) the
+\caption{\label{tbl-es-decision-1}Decision table with 12-year
+projections. `Mgmt' refers to the management scenario (A) with the
 default harvest control rule \(P^* = 0.40\). In each case the 2025 and
 2026 catches are fixed at the estimates provided by the GMT. The catch
 for the Washington recreational fleet is input in numbers so the GMT
@@ -1053,9 +1045,9 @@ Mgmt & Year & Catch & Low Spawn & Low Frac & Base Spawn & Base Frac & High Spawn
 \subsection*{Scientific uncertainty}\label{scientific-uncertainty}
 \addcontentsline{toc}{subsection}{Scientific uncertainty}
 
-The model estimated uncertainty around the 2025 spawning output with a
-standard deviation = 0.027. The uncertainty around the \gls{ofl} in 2025
-has a standard deviation = 11.546. Each of these are likely
+The model estimate of the log-scale standard deviation of the 2025
+spawning output is 0.0996. The model estimate of the log-scale standard
+deviation of the 2025 \gls{ofl} is 0.095. Each of these are likely
 underestimates of overall uncertainty due to the necessity to fix
 several key population dynamics parameters (e.g.~steepness and
 recruitment variance) and also because there is no explicit
@@ -1082,6 +1074,8 @@ population:
   Expand the IPHC age composition bins to an older maximum age for the
   IPHC age composition data to spread out the distribution of length
   data in the oldest age bins for conditional age-at-length.
+\item
+  Explore potential indices of abundance in untrawlable areas.
 \end{itemize}
 
 \subsection*{Rebuilding projections}\label{rebuilding-projections}
@@ -1162,10 +1156,11 @@ information.
 Since the 2017 assessment, catch restrictions for Yelloweye Rockfish
 have continued, though as the stock has begun to recover, the rebuilding
 plan has allowed for small catch increases that have slightly loosened
-the constraining impact of this species. However, this section is not
-required for an update assessment; please refer to the most recent full
-assessment (Gertseva and Cope 2017) and Section~\ref{sec-mgmt} for
-additional information.
+the constraining impact of this species.
+
+This section is not required for an update assessment; please refer to
+the most recent full assessment (Gertseva and Cope 2017) and
+Section~\ref{sec-mgmt} for additional information.
 
 \subsection{Management performance}\label{sec-mgmt}
 
@@ -1560,8 +1555,8 @@ approach.
 Two sources of fishery-independent data were updated: the West Coast
 Groundfish Bottom Trawl Survey and the \gls{iphc} Longline survey.
 
-\subsubsection{West Coast Bottom Trawl Survey
-(WCGBTS)}\label{west-coast-bottom-trawl-survey-wcgbts}
+\subsubsection{West Coast Groundfish Bottom Trawl Survey
+(WCGBTS)}\label{west-coast-groundfish-bottom-trawl-survey-wcgbts}
 
 The \gls{indexwc} survey methods are most recently described in detail
 in Keller, Wallace, and Methot (2017). Geostatistical models of biomass
@@ -1727,13 +1722,13 @@ F = aL^b
 
 Where \(F\) is fecundity (number of eggs), \(L\) is fish length (cm),
 and \(a\) and \(b\) are constant coefficients
-(Figure~\ref{fig-fecundity}). For Yelloweye Dick et al. (2017) estimated
-\(a = 7.21847\)*10\textsuperscript{-8} and \(b = 4.043\).
+(Figure~\ref{fig-fecundity}). For Yelloweye Rockfish, Dick et al. (2017)
+estimated \(a = 7.21847\)*10\textsuperscript{-8} and \(b = 4.043\).
 
 \subsubsection{Natural Mortality}\label{natural-mortality}
 
 The 2025 base model used the 2017 assessment's initial value of natural
-Mortality (\(M\)) which was estimated based on Owen S. Hamel (2015).
+Mortality (\(M\)) which was estimated based on Hamel (2015).
 
 \subsection{Environmental and ecosystem
 data}\label{environmental-and-ecosystem-data}
@@ -1925,7 +1920,7 @@ information.
 \subsubsection{Priors}\label{priors}
 
 The natural mortality prior standard deviation was updated to be
-consistent with methods described in Owen S. Hamel and Cope (2022).
+consistent with methods described in Hamel and Cope (2022).
 
 \subsubsection{Data Weighting}\label{data-weighting}
 
@@ -1958,11 +1953,12 @@ current practice, recruitment deviations during the ``main'' period
 (from 1980 to 2023) were forced to sum to zero and the bias adjustment
 ramp was updated (Figure~\ref{fig-biasadj}).
 
-Catchability parameters, we extended the time block on catchability
-parameter for the OR rec index to 2004 to encompass additional data. To
-fit these data we extimated the catchability offset between MRFFS and
-ORBS, both are in fleet 6. In order to estiamte it we set Float to 0 and
-Phase to 1.
+We extended the time blocks on catchability parameters to 2024 to
+encompass additional data. To best fit the index for the Oregon
+recreational fleet, an offset for catchability between the MRFFS and
+ORBS sampling time periods was estimated in the 2017 assessment. In
+order to estimate this parameter under current best practices, the float
+was set to 0 and the phase to 1.
 
 All selectivities were assumed to be length-based and used a
 double-normal functional form. Selectivities for all fleets were
@@ -1991,7 +1987,7 @@ along with the Stock Synthesis input files.
 \subsubsection{Parameter Estimates}\label{parameter-estimates}
 
 Estimated and fixed parameter values are shown in Table~\ref{tbl-pars}.
-Unfished recruitment was estimated at 5 thousands of fish. The von
+Unfished recruitment was estimated at 5.488 thousands of fish. The von
 Bertalanffy growth function (Bertalanffy 1938) was used to model the
 relationship between length and age in Yelloweye Rockfish. Conditional
 age-at-length data is the main source of information to estimate growth.
@@ -2113,8 +2109,8 @@ Model convergence was evaluated by starting the minimization process
 from dispersed values of the maximum likelihood estimates to determine
 if the model found a better minimum. Starting parameters were jittered
 using the jitter function built into Stock Synthesis, using a jitter
-input of 0.10. This was repeated 50 times with 78\% of runs returning to
-the base model likelihood. A better, lower negative log-likelihood,
+input of 0.10. This was repeated 100 times with 82\% of runs returning
+to the base model likelihood. A better, lower negative log-likelihood,
 model fit was not found. The spread of this search indicates that the
 jitter was sufficient to search a large portion of the likelihood
 surface, and that the base model is at a global minimum
@@ -2234,24 +2230,25 @@ associated with different values of \(M\) ranging from 0.03 to 0.06 are
 shown in Figure~\ref{fig-natm-bratio}.
 
 In the base model, \(h\) is fixed at the mean of the meta-analytic
-steepness prior, 0.718, which is the same as in the 2017 assessment;
-much higher values (e.g.~0.9) are considered implausible given the
-life-history of slow growing rockfish. The likelihood profile for \(h\)
-shows that the negative log-likelihood for the base model declines with
-increasing \(h\) to a value around 0.7, notably different from the
-sensitivity analysis (Figure~\ref{fig-steep-piner}). Time series of
-relative unfished biomass associated with different values of \(h\)
-ranging from 0.25 to 1.0 are shown in Figure~\ref{fig-steep-bratio}.
+steepness prior, 0.72; much higher values (e.g.~0.9) are considered
+implausible given the life-history of slow growing rockfish. The
+likelihood profile for \(h\) shows that the negative log-likelihood for
+the base model declines with increasing \(h\) to a value around 0.8,
+notably different from the sensitivity analysis
+(Figure~\ref{fig-steep-piner}). Time series of relative unfished biomass
+associated with different values of \(h\) ranging from 0.25 to 1.0 are
+shown in Figure~\ref{fig-steep-bratio}.
 
 A likelihood profile analysis for ln(\(R\)\textsubscript{0}) shows a
 strongly informed initial recruitment value in the base model
 (Figure~\ref{fig-rzero-piner}). Most of the information for this
-parameter is coming from the length data. Within the length composition
-likelihood component, all sources of length compositions are equally
-informative. The index and age data are relatively uninformative.
-Changes in ln(\(R\)\textsubscript{0}) results in relatively small
-changes in the scale of the population (Figure~\ref{fig-rzero-sp-output}
-and Figure~\ref{fig-rzero-parm}) compared to the 2017 assessment model.
+parameter is coming from the recruitment estimates. Within the length
+composition likelihood component, all sources of length compositions are
+equally informative. The index and age data are relatively
+uninformative. Changes in ln(\(R\)\textsubscript{0}) results in
+relatively small changes in the scale of the population
+(Figure~\ref{fig-rzero-sp-output} and Figure~\ref{fig-rzero-parm})
+compared to the 2017 assessment model.
 
 \subsection{Unresolved Problems and Major
 Uncertainties}\label{unresolved-problems-and-major-uncertainties}
@@ -2352,9 +2349,9 @@ Twelve-year forecasts for each state of nature were calculated
 \subsection{Evaluation of Scientific
 Uncertainty}\label{evaluation-of-scientific-uncertainty}
 
-The model estimated uncertainty around the 2025 spawning output with a
-standard deviation = 0.027. The uncertainty around the \gls{ofl} in 2025
-has a standard deviation = 11.546. Each of these are likely
+The model estimate of the log-scale standard deviation of the 2025
+spawning output is 0.0996. The model estimate of the log-scale standard
+deviation of the 2025 \gls{ofl} is 0.095. Each of these are likely
 underestimates of overall uncertainty due to the necessity to fix
 several key population dynamics parameters (e.g.~steepness and
 recruitment variance) and also because there is no explicit
@@ -2397,7 +2394,7 @@ population:
 The authors would like to thank the other members of the FSH 577 class,
 particularly those on the Yelloweye Rockfish team (Emily Branam, Julia
 Coates, Kimberly Fitzpatrick, Madison Sandquist, Olivia Boisen and
-Rachel Brooks).
+Rachel Brooks). The authors also thank all data providers.
 
 \newpage{}
 
@@ -2459,13 +2456,13 @@ Management Council, 7700 Ambassador Place NE, Suite 200, Portland, OR
 97220: Pacific Fishery Management Council.
 
 \bibitem[\citeproctext]{ref-hamel_method_2015}
-Hamel, Owen S. 2015. {``A Method for Calculating a Meta-Analytical Prior
+Hamel, O. S. 2015. {``A Method for Calculating a Meta-Analytical Prior
 for the Natural Mortality Rate Using Multiple Life History
 Correlates.''} \emph{ICES Journal of Marine Science: Journal Du Conseil}
 72 (1): 62--69. \url{https://doi.org/10.1093/icesjms/fsu131}.
 
 \bibitem[\citeproctext]{ref-hamel2022development}
-Hamel, Owen S, and Jason M Cope. 2022. {``Development and Considerations
+Hamel, O. S., and Jason M Cope. 2022. {``Development and Considerations
 for Application of a Longevity-Based Prior for the Natural Mortality
 Rate.''} \emph{Fisheries Research} 256: 106477.
 
@@ -2602,7 +2599,7 @@ Year & OFL (mt) & ABC (mt) & ACL (mt) & Catch (mt) \\
 2021 & 97.5 & 83.5 & 50.0 & 20.73 \\ 
 2022 & 98.1 & 83.2 & 51.0 & 33.64 \\ 
 2023 & 89.6 & 75.3 & 52.0 & 39.23 \\ 
-2024 & 91.2 & 75.9 & 53.3 & 14.94 \\ 
+2024 & 91.2 & 75.9 & 53.3 & 28.91 \\ 
 \bottomrule
 
 \end{longtable}
@@ -3730,7 +3727,7 @@ Label & Base & - CA REC & - OR REC & - WA REC & - CA CPFV & - ORFS & - Triennial
 \hspace{1em}L at Amax Female & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.3} & \textcolor{black}{61.5} & \textcolor{black}{62.4} & \textcolor{black}{62.7}\\
 \addlinespace[0.3em]
 \multicolumn{11}{l}{\textbf{Estimates of derived quantities}}\\
-\hspace{1em}Unfished age 4+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.156} & \textcolor{black}{10.194} & \textcolor{black}{9.9} & \textcolor{black}{10.52} & \textcolor{black}{10.358} & \textcolor{black}{10.382} & \textcolor{black}{10.489} & \textcolor{black}{9.916} & \textcolor{black}{9.454}\\
+\hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.156} & \textcolor{black}{10.194} & \textcolor{black}{9.9} & \textcolor{black}{10.52} & \textcolor{black}{10.358} & \textcolor{black}{10.382} & \textcolor{black}{10.489} & \textcolor{black}{9.916} & \textcolor{black}{9.454}\\
 \hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1169.99} & \textcolor{black}{1174.29} & \textcolor{black}{1140.22} & \textcolor{black}{1211.93} & \textcolor{black}{1193.95} & \textcolor{black}{1195.11} & \textcolor{black}{1205.33} & \textcolor{black}{1162.9} & \textcolor{black}{1111.28}\\
 \hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{459.638} & \textcolor{black}{464.736} & \textcolor{black}{434.657} & \textcolor{black}{499.77} & \textcolor{black}{488.3} & \textcolor{black}{485.989} & \textcolor{black}{484.887} & \textcolor{black}{391.733} & \textcolor{black}{339.272}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.393} & \textcolor{black}{0.396} & \textcolor{black}{0.381} & \textcolor{black}{0.412} & \textcolor{black}{0.409} & \textcolor{black}{0.407} & \textcolor{black}{0.402} & \textcolor{black}{0.337} & \textcolor{black}{0.305}\\
@@ -3775,7 +3772,7 @@ Label & Base & - CA TWL & - CA NONTWL & - CA REC & - ORWA TWL & - ORWA NONTWL & 
 \hspace{1em}L at Amax Female & \textcolor{black}{61.4} & \textcolor{black}{61.3} & \textcolor{black}{61.3} & \textcolor{black}{61.3} & \textcolor{black}{61.2} & \textcolor{black}{61.4} & \textcolor{black}{61.3} & \textcolor{black}{61.2}\\
 \addlinespace[0.3em]
 \multicolumn{9}{l}{\textbf{Estimates of derived quantities}}\\
-\hspace{1em}Unfished age 4+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.24} & \textcolor{black}{10.38} & \textcolor{black}{10.41} & \textcolor{black}{10.278} & \textcolor{black}{10.468} & \textcolor{black}{10.661} & \textcolor{black}{10.304}\\
+\hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.24} & \textcolor{black}{10.38} & \textcolor{black}{10.41} & \textcolor{black}{10.278} & \textcolor{black}{10.468} & \textcolor{black}{10.661} & \textcolor{black}{10.304}\\
 \hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1178.36} & \textcolor{black}{1194.97} & \textcolor{black}{1198.67} & \textcolor{black}{1182.05} & \textcolor{black}{1207.27} & \textcolor{black}{1231.32} & \textcolor{black}{1184.65}\\
 \hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{471.102} & \textcolor{black}{447.839} & \textcolor{black}{511.303} & \textcolor{black}{520.246} & \textcolor{black}{500.739} & \textcolor{black}{543.75} & \textcolor{black}{475.296}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.4} & \textcolor{black}{0.375} & \textcolor{black}{0.427} & \textcolor{black}{0.44} & \textcolor{black}{0.415} & \textcolor{black}{0.442} & \textcolor{black}{0.401}\\
@@ -3820,7 +3817,7 @@ Label & Base & - CA CPFV & - ORFS & - Triennial & - WCGBTS & - IPHC & No length 
 \hspace{1em}L at Amax Female & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.3} & \textcolor{black}{61.4} & \textcolor{black}{61.3} & \textcolor{black}{61.4}\\
 \addlinespace[0.3em]
 \multicolumn{8}{l}{\textbf{Estimates of derived quantities}}\\
-\hspace{1em}Unfished age 4+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.277} & \textcolor{black}{10.357} & \textcolor{black}{10.295} & \textcolor{black}{10.353} & \textcolor{black}{10.298} & \textcolor{black}{16.697}\\
+\hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.277} & \textcolor{black}{10.357} & \textcolor{black}{10.295} & \textcolor{black}{10.353} & \textcolor{black}{10.298} & \textcolor{black}{16.697}\\
 \hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1184.01} & \textcolor{black}{1193.73} & \textcolor{black}{1185.09} & \textcolor{black}{1192.46} & \textcolor{black}{1186.1} & \textcolor{black}{1935.01}\\
 \hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{473.383} & \textcolor{black}{490.053} & \textcolor{black}{476.66} & \textcolor{black}{488.707} & \textcolor{black}{477.218} & \textcolor{black}{1450.16}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.4} & \textcolor{black}{0.411} & \textcolor{black}{0.402} & \textcolor{black}{0.41} & \textcolor{black}{0.402} & \textcolor{black}{0.749}\\
@@ -3865,7 +3862,7 @@ Label & Base & - CA NONTWL & - CA REC & - ORWA TWL & - ORWA NONTWL & - OR REC & 
 \hspace{1em}L at Amax Female & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.3} & \textcolor{black}{61.7} & \textcolor{black}{61.3} & \textcolor{black}{61.3} & \textcolor{black}{61.1} & \textcolor{black}{61.5} & \textcolor{black}{62.4} & \textcolor{black}{60.8} & \textcolor{black}{61.2}\\
 \addlinespace[0.3em]
 \multicolumn{12}{l}{\textbf{Estimates of derived quantities}}\\
-\hspace{1em}Unfished age 4+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.32} & \textcolor{black}{10.411} & \textcolor{black}{10.185} & \textcolor{black}{10.418} & \textcolor{black}{10.351} & \textcolor{black}{10.61} & \textcolor{black}{10.441} & \textcolor{black}{9.945} & \textcolor{black}{11.047} & \textcolor{black}{10.986}\\
+\hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{10.32} & \textcolor{black}{10.411} & \textcolor{black}{10.185} & \textcolor{black}{10.418} & \textcolor{black}{10.351} & \textcolor{black}{10.61} & \textcolor{black}{10.441} & \textcolor{black}{9.945} & \textcolor{black}{11.047} & \textcolor{black}{10.986}\\
 \hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1188.12} & \textcolor{black}{1197.32} & \textcolor{black}{1169.27} & \textcolor{black}{1200.16} & \textcolor{black}{1189.66} & \textcolor{black}{1217.61} & \textcolor{black}{1199.98} & \textcolor{black}{1166.44} & \textcolor{black}{1228.11} & \textcolor{black}{1241.2}\\
 \hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{475.113} & \textcolor{black}{475.18} & \textcolor{black}{461.464} & \textcolor{black}{485.851} & \textcolor{black}{469.622} & \textcolor{black}{502.097} & \textcolor{black}{471.858} & \textcolor{black}{393.043} & \textcolor{black}{469.146} & \textcolor{black}{549.181}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.4} & \textcolor{black}{0.397} & \textcolor{black}{0.395} & \textcolor{black}{0.405} & \textcolor{black}{0.395} & \textcolor{black}{0.412} & \textcolor{black}{0.393} & \textcolor{black}{0.337} & \textcolor{black}{0.382} & \textcolor{black}{0.442}\\
@@ -3910,7 +3907,7 @@ Label & Base & Est. M & Est. steepness & 2017 LW relationship\\
 \hspace{1em}L at Amax Female & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.4} & \textcolor{black}{61.4}\\
 \addlinespace[0.3em]
 \multicolumn{5}{l}{\textbf{Estimates of derived quantities}}\\
-\hspace{1em}Unfished age 4+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{11.865} & \textcolor{black}{10.281} & \textcolor{black}{10.331}\\
+\hspace{1em}Unfished age 8+ bio 1000 mt & \textcolor{black}{10.331} & \textcolor{black}{11.865} & \textcolor{black}{10.281} & \textcolor{black}{10.331}\\
 \hspace{1em}B0 millions of eggs & \textcolor{black}{1190} & \textcolor{black}{1316.36} & \textcolor{black}{1184.16} & \textcolor{black}{1190}\\
 \hspace{1em}B2025 millions of eggs & \textcolor{black}{477.63} & \textcolor{black}{724.664} & \textcolor{black}{639.998} & \textcolor{black}{477.63}\\
 \hspace{1em}Fraction unfished 2025 & \textcolor{black}{0.401} & \textcolor{black}{0.551} & \textcolor{black}{0.54} & \textcolor{black}{0.401}\\
@@ -4951,7 +4948,7 @@ assessment trajectory with the 2025 base model.}
 
 }
 
-\caption{\label{fig-full-jitter}Results from 50 base model runs when
+\caption{\label{fig-full-jitter}Results from 100 base model runs when
 starting parameters values are jittered by 0.1 units. Horizontal line
 indicates base model value.}
 
@@ -5298,7 +5295,7 @@ estimate.}
 
 \caption{\label{fig-eq-yield}Equilibrium yield curve (derived from
 reference point values) for the base model. Values are based on 2024
-fishery selectivity and distribution with steepness fixed at 0.718. The
+fishery selectivity and distribution with steepness fixed at 0.72. The
 relative spawning output is relative to unfished spawning biomass.}
 
 \end{figure}%
