--- a/report/02_introduction.qmd
+++ b/report/02_introduction.qmd
@@ -22,7 +22,7 @@ This section is not required for an update assessment; please refer to the most 
 
 ## Management History
 
-Since the 2017 assessment, catch restrictions for Yelloweye Rockfish have continued, though as the stock has begun to recover, the rebuilding plan has allowed for small catch increases that have slightly loosened the constraining impact of this species.
+Since the 2017 assessment, catch restrictions for Yelloweye Rockfish have continued, though as the stock recovers, the rebuilding plan has allowed for small catch increases that slightly loosened the constraining impact of this species.
 
 This section is not required for an update assessment; please refer to the most recent full assessment [@gertseva_stock_2017] and @sec-mgmt for additional information.
 
