Issues with Table 1 link going to Table i
cant figure it out....

--- a/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
+++ b/report/SAR_USWC_Yelloweye_rockfish_skeleton.tex
@@ -1096,6 +1096,8 @@ This section will be updated after SSC GFSC review.
 \setcounter{table}{0}
 \setcounter{figure}{0}
 
+\clearpage
+
 \section{Introduction}\label{introduction}
 
 Yelloweye Rockfish (\emph{Sebastes ruberrimus}) are found from the Gulf
@@ -1154,9 +1156,9 @@ information.
 \subsection{Management History}\label{management-history}
 
 Since the 2017 assessment, catch restrictions for Yelloweye Rockfish
-have continued, though as the stock has begun to recover, the rebuilding
-plan has allowed for small catch increases that have slightly loosened
-the constraining impact of this species.
+have continued, though as the stock recovers, the rebuilding plan has
+allowed for small catch increases that slightly loosened the
+constraining impact of this species.
 
 This section is not required for an update assessment; please refer to
 the most recent full assessment (Gertseva and Cope 2017) and
@@ -1178,16 +1180,15 @@ the Yelloweye \gls{rca} for the trawl sector off of California and
 Oregon, and eliminating some gear restrictions in the RCAs for the
 non-trawl sector.
 
-Recent trends in total catch relative to management guidelines is
-available in Table~\ref{tbl-yelloweye_management} and shows that total
-catch of Yelloweye Rockfish has remained below both the \gls{ofl} and
-\gls{acl} in each year since the previous assessment. Catch in
-Table~\ref{tbl-yelloweye_management} combines the two areas in this
-model as catch limits for Yelloweye Rockfish are managed as a single
-coast wide unit and includes both landings and estimated discard
-mortality. As in the previous assessment, total catches for each fleet
-in this update include both landings and estimated dead discard
-mortality.
+Recent trends in total catch relative to management guidelines are
+available in Table~\ref{tbl-ye-management} and show that total catch of
+Yelloweye Rockfish has remained below both the \gls{ofl} and \gls{acl}
+in each year since the previous assessment. Catch in
+Table~\ref{tbl-ye-management} combines the two areas in this model as
+catch limits for Yelloweye Rockfish are managed as a single coast wide
+unit and includes both landings and estimated discard mortality. As in
+the previous assessment, total catches for each fleet in this update
+include both landings and estimated dead discard mortality.
 
 \subsection{Fisheries off Canada and
 Alaska}\label{fisheries-off-canada-and-alaska}
@@ -2580,10 +2581,10 @@ Reconstruction (1979-2000).''} ODFW Science Bulletin 2024-09.
 
 \begin{longtable}{rrrrr}
 
-\caption{\label{tbl-yelloweye_management}Recent trend in the overfishing
-limits (OFL), the acceptable biological catches (ABCs), the annual catch
-limits (ACLs), and the total dead catch (landings + discards) all in
-metric tons (mt).}
+\caption{\label{tbl-ye-management}Recent trend in the overfishing limits
+(OFL), the acceptable biological catches (ABCs), the annual catch limits
+(ACLs), and the total dead catch (landings + discards) all in metric
+tons (mt).}
 
 \tabularnewline
 
