--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -2,13 +2,32 @@
 
 <!-- Introduction -->
 
-```{r, yelloweye_management}
-#| label: tbl-yelloweye_management
-#| echo: false
+```{r, tbl-yelloweye_management, results = "asis"}
+#| label: tbl-ye-management
 #| warning: false
+#| echo: false
+#| eval: !expr eval_tables 
 #| tbl-cap: "Recent trend in the overfishing limits (OFL), the acceptable biological catches (ABCs), the annual catch limits (ACLs), and the total dead catch (landings + discards) all in metric tons (mt)."
+#| tbl-pos: H
 
-# used the csv until two area thing sorted in r4ss
+# changed to csv file until r4ss gets fixed
+
+yelloweye_management <- read.csv("tables/yelloweye_management.csv")
+ yelloweye_management |> 
+   gt::gt() |>
+   gt::cols_label(
+    `Year` = "Year",
+    `OFL..mt.` = "OFL (mt)",
+    `ABC..mt.` = "ABC (mt)",
+    `ACL..mt.` = "ACL (mt)",
+    `Catch..mt.` = "Catch (mt)"
+  ) |>
+   gt::tab_options(
+     table.font.size = 12,
+     latex.use_longtable = TRUE
+   ) |>
+   gt::as_latex()
+
 #recent_management_table |>
 #  dplyr::rename(`Total dead catch (mt)` = `Catch (mt)`) |>
 #  gt::gt() |>
@@ -17,22 +36,6 @@
 #    latex.use_longtable = TRUE 
 #  ) |>
 #  gt::as_latex()
-
-yelloweye_management <- read.csv("tables/yelloweye_management.csv")
-yelloweye_management |>
-   gt::gt() |>
-   cols_label(
-    `Year` = "Year",
-    `OFL..mt.` = "OFL (mt)",
-    `ABC..mt.` = "ABC (mt)",
-    `ACL..mt.` = "ACL (mt)",
-    `Catch..mt.` = "Catch (mt)"
-  ) |>
-   tab_options(
-     table.font.size = 12,
-     latex.use_longtable = TRUE
-   ) |>
-   as_latex()
 
 ```
 
