--- a/report/01_executive_summary.qmd
+++ b/report/01_executive_summary.qmd
@@ -351,23 +351,31 @@ Recent trends in total catch relative to management guidelines is available in @
 #| tbl-cap: "Recent trend in the overfishing limits (OFL), the acceptable biological catches (ABCs), the annual catch limits (ACLs), and the total dead catch (landings + discards) all in metric tons (mt)."
 #| tbl-pos: H
 
-# changed to csv file until r4ss gets fixed
 
-yelloweye_management <- read.csv("tables/yelloweye_management.csv")
- yelloweye_management |> 
+recent_management_table |>
    gt::gt() |>
-   gt::cols_label(
-    `Year` = "Year",
-    `OFL..mt.` = "OFL (mt)",
-    `ABC..mt.` = "ABC (mt)",
-    `ACL..mt.` = "ACL (mt)",
-    `Catch..mt.` = "Catch (mt)"
-  ) |>
    gt::tab_options(
      table.font.size = 12,
      latex.use_longtable = TRUE
    ) |>
    gt::as_latex()
+# changed to csv file until r4ss gets fixed
+
+#yelloweye_management <- read.csv("tables/yelloweye_management.csv")
+# yelloweye_management |> 
+#   gt::gt() |>
+#   gt::cols_label(
+#    `Year` = "Year",
+#    `OFL..mt.` = "OFL (mt)",
+#    `ABC..mt.` = "ABC (mt)",
+#    `ACL..mt.` = "ACL (mt)",
+#    `Catch..mt.` = "Catch (mt)"
+#  ) |>
+#   gt::tab_options(
+#     table.font.size = 12,
+#     latex.use_longtable = TRUE
+#   ) |>
+#   gt::as_latex()
 
 #recent_management_table |>
 #  dplyr::rename(`Total dead catch (mt)` = `Catch (mt)`) |>
