--- a/report/08_tables.qmd
+++ b/report/08_tables.qmd
@@ -58,7 +58,7 @@ recent_management_table |>
 #| echo: false
 #| warning: false
 #| results: "asis"
-#| tbl-cap: "Time series of yelloweye rockfish catches by fleet used in the assessment. Trawl fleets include yelloweye bycatch in foreign POP and in at-sea Pacific hake fisheries. Years 1967 - 1974, 1979, and 2002 - 2004 do not include WA Sport Catch in MT as that information is not available."
+#| tbl-cap: "Time series of Yelloweye Rockfish catches (mt) by fleet used in the assessment. Trawl fleets include Yelloweye Rockfish bycatch in foreign POP and in at-sea Pacific hake fisheries."
 
 cat("\\begin{landscape}\n")
 
